# vertica_pivot

./: .gitignore  README.md  configure  configure.ac  makefile  makefile.am  makefile.in
ddl/: install.sql  uninstall.sql
src/: pivot.cpp  unpivot.cpp
test/: test.sql  testmore.sql
